k8s/base/documentation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: documentation-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: docs.school-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: school-documentation
            port:
              number: 80
